--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,11 @@ body {
 	background-image: url(../images/bodyBkgrnd.png);
 }
 
+html,
+body {
+	height: 100%;
+}
+
 hr {
 	border-top: 1px solid #aaa8b1;
 }
@@ -15,12 +20,30 @@ a.active {
 	color: #214d77 !important;
 }
 
-img.connect {
-	padding: 0px 10px 0px 10px;
+.sidebar li {
+	float: left;
+
+  
+
+	margin-right: 10px;
+	margin-left: 10px;
 }
+
+.sidebar img {
+	max-width: 100%;
+}
+
+.wrapper {
+	height: auto !important;
+	height: 100%;
+	min-height: 100%;
+	margin: 0 auto -105px;
+}
+
 .navbar {
 	padding: 0px;
 	border-bottom: 8px solid #214d77;
+	margin-bottom: 20px;
 }
 
 .siteHeader {
@@ -38,7 +61,10 @@ img.connect {
 }
 
 .aboutContent {
-	margin-top: 20px;
+	width: 100%;
+	max-width: 960px;
+	margin: 0 auto;
+	clear: both;
 }
 
 .card-body {
@@ -46,9 +72,9 @@ img.connect {
 }
 
 .card-img {
-    height: 200px;
-    width: 320px;
-}
+    height: 223px;
+    width: 300px;
+} 
 
 .headerAbout {
 	color: #998e7b;
@@ -78,11 +104,17 @@ img.connect {
 
 .portfolioContent {
 	margin-top: 40px;
+	margin-bottom: 40px;
 }
 
 .headerPortfolio {
 	color: #998e7b;
 	font-weight: bold;
+}
+
+.portolioCard {
+	height: 225px;
+	width: 300px;
 }
 
 .contactContent {
@@ -109,7 +141,7 @@ img.connect {
 
 footer {
   padding: 30px 0;
-  margin-top: 20px;
+
   clear: both;
   font-size: 12px;
   color: #fff;
@@ -121,5 +153,5 @@ footer {
 
 footer,
 .push {
-  height: 105px;
+  height: 100px;
 }
